--- a/index.html
+++ b/index.html
@@ -1,1 +1,190 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <!-- CSS Stylesheets -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap"
+        rel="stylesheet">
+
+
+</head>
+
+<body>
+    <section id="title">
+        <div class="container-fluid">
+            <div class="container py-5 px-3">
+                <h1 class="fw-light">Mar Koss</h1>
+                <h4>Software Developer</h2>
+                    <p>I’m a self-motivated mobile developer, specializing in iOS / Swift. I’m inspired by the multiple
+                        languages of the mind that mobile app technology engages, combining my passion for both
+                        structure
+                        and creativity. I’m enthusiastic about well architectured, tested, quality code and am always
+                        looking for new ways to deliver this in my work through new technology and ideas. Attention to
+                        detail is important to me. My background in event / project management has sharpened my ability
+                        to
+                        focus, manage tasks, collaborate with a team and see projects to completion. If I’m not
+                        programming,
+                        I’m making music, working with electronics or otherwise creating. </p>
+            </div>
+
+            <div class="py-3">
+                <div class="container">
+                    <div class="row row-cols-2 row-cols-sm-4">
+                        <div class="col text-center py-2">
+                            <a href="#experience" class="btn btn-dark nav-link"> Experience </a>
+                        </div>
+                        <div class="col text-center py-2">
+                            <a href="#skills" class="btn btn-dark nav-link"> Skills </a>
+                        </div>
+                        <div class="col text-center py-2">
+                            <a href="#projects" class="btn btn-dark nav-link"> Projects </a>
+                        </div>
+                        <div class="col text-center py-2">
+                            <a href="#education" class="btn btn-dark nav-link"> Education </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </section>
+
+    <div class="container">
+
+        <section id="experience">
+            <div class="container-fluid">
+                <h2>Experience</h2>
+                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
+                    if
+                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
+                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
+                    I've
+                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
+                    God
+                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
+                    think
+                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
+                    have
+                    dinosaurs on your dinosaur tour, right? I was part of something special.
+                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
+                    Jaguar
+                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
+                    bucket
+                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
+                    could, they didn't stop to think if they should.
+                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
+                    Dinosaurs.
+                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
+                    and
+                    I'll give you something to cry about you little bastard!</p>
+            </div>
+        </section>
+
+        <section id="skills">
+            <div class="container-fluid">
+                <h2>Skills</h2>
+                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
+                    if
+                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
+                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
+                    I've
+                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
+                    God
+                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
+                    think
+                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
+                    have
+                    dinosaurs on your dinosaur tour, right? I was part of something special.
+                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
+                    Jaguar
+                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
+                    bucket
+                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
+                    could, they didn't stop to think if they should.
+                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
+                    Dinosaurs.
+                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
+                    and
+                    I'll give you something to cry about you little bastard!</p>
+            </div>
+        </section>
+
+        <section id="projects">
+            <div class="container-fluid">
+                <h2>Projects</h2>
+                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
+                    if
+                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
+                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
+                    I've
+                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
+                    God
+                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
+                    think
+                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
+                    have
+                    dinosaurs on your dinosaur tour, right? I was part of something special.
+                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
+                    Jaguar
+                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
+                    bucket
+                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
+                    could, they didn't stop to think if they should.
+                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
+                    Dinosaurs.
+                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
+                    and
+                    I'll give you something to cry about you little bastard!</p>
+            </div>
+        </section>
+
+        <section id="education">
+            <div class="container-fluid">
+                <h2>Education</h2>
+                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
+                    if
+                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
+                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
+                    I've
+                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
+                    God
+                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
+                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
+                    think
+                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
+                    have
+                    dinosaurs on your dinosaur tour, right? I was part of something special.
+                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
+                    Jaguar
+                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
+                    bucket
+                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
+                    could, they didn't stop to think if they should.
+                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
+                    Dinosaurs.
+                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
+                    and
+                    I'll give you something to cry about you little bastard!</p>
+            </div>
+        </section>
+    </div>
+
+</body>
+
+</html>
