--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -23,7 +23,7 @@
         <div class="container-fluid">
             <div class="container py-5 px-3">
                 <h1 class="fw-light">Mar Koss</h1>
-                <h4>Software Developer</h2>
+                <h5>Software Developer</h2>
                     <p>I’m a self-motivated mobile developer, specializing in iOS / Swift. I’m inspired by the multiple
                         languages of the mind that mobile app technology engages, combining my passion for both
                         structure
@@ -37,7 +37,7 @@
             </div>
 
             <div class="py-3">
-                <div class="container">
+                <div class="container nav-wide">
                     <div class="row row-cols-2 row-cols-sm-4">
                         <div class="col text-center py-2">
                             <a href="#experience" class="btn btn-dark nav-link"> Experience </a>
@@ -53,42 +53,177 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="container nav-narrow">
+                    <div class="row row-cols-4">
+                        <div class="col text-center py-2">
+                            <a href="#experience" class="btn btn-dark nav-link">
+                                <img src="img/history.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col text-center py-2">
+                            <a href="#skills" class="btn btn-dark nav-link">
+                                <img src="img/skills.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col text-center py-2">
+                            <a href="#projects" class="btn btn-dark nav-link">
+                                <img src="img/projects.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col text-center py-2">
+                            <a href="#education" class="btn btn-dark nav-link">
+                                <img src="img/education.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        
+
     </section>
 
     <div class="container">
 
         <section id="experience">
-            <div class="container-fluid">
-                <h2>Experience</h2>
-                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
-                    if
-                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
-                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
-                    I've
-                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
-                    God
-                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
-                    think
-                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
-                    have
-                    dinosaurs on your dinosaur tour, right? I was part of something special.
-                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
-                    Jaguar
-                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
-                    bucket
-                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
-                    could, they didn't stop to think if they should.
-                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
-                    Dinosaurs.
-                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
-                    and
-                    I'll give you something to cry about you little bastard!</p>
+            <h2>Experience</h2>
+
+            <div class="experience-card">
+
+                <div class="experience-head container-fluid">
+                    <div class="position-company">
+                        <p class="company">Lighthouse Labs</p>
+                        <p> - </p>
+                        <p class="position">iOS Mentor</p>
+                    </div>
+                    <p class="location">Vancouver, BC</p>
+                    <p class="period">June 2019 - July 2019</p>
+                </div>
+
+                <div class="experience-body container-fluid">
+
+                    <p>
+                        Provided knowledge/experience of iOS development to students with varying skill levels and
+                        knowledge sets.</p>
+                    <p>
+                        Guided students to conclusions by emphasizing self-directed learning.</p>
+                    <p>
+                        Employed attentive listening and clear communication to ensure efficient knowledge transfer.</p>
+
+                </div>
+
             </div>
+
+            <hr>
+
+            <div class="experience-card">
+                <div class="experience-head container-fluid">
+                    <div class="position-company">
+                        <p class="company">Daanaa Solutions Inc</p>
+                        <p> - </p>
+                        <p class="position">iOS Developer</p>
+                    </div>
+                    <p class="location">Vancouver, BC</p>
+                    <p class="period">April 2019 - May 2019</p>
+                </div>
+
+                <div class="experience-body container-fluid">
+                    <p>
+                        Prioritized core specifications to complete the project within a short timeline, resulting in a
+                        functional demonstrative app.</p>
+                    <p>
+                        Leveraged AWS AppSync to perform data manipulation on DynamoDB and authenticate with Cognito
+                        while minimizing required code.</p>
+                    <p>
+                        Clear and direct communication was key while working with little documentation and a marginally
+                        available team within a narrow timeframe.</p>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="experience-card">
+                <div class="experience-head container-fluid">
+                    <div class="position-company">
+                        <p class="company">Theorema Systems</p>
+                        <p> - </p>
+                        <p class="position">iOS Developer</p>
+                    </div>
+                    <p class="location">Vancouver, BC</p>
+                    <p class="period">January 2019 - March 2019</p>
+                </div>
+
+                <div class="experience-body container-fluid">
+                    <p>
+                        Worked closely with a small team of developers and designers to create and distribute a transit
+                        aggregator app.</p>
+                    <p>
+                        Leveraged Google Maps API to provide clear and simple route information for mixed transportation
+                        modes.</p>
+                    <p>
+                        Provided quality assurance through testing on the Jira platform.</p>
+                    <p>
+                        Used project management tools through Jira to effectively multi-task and coordinate with
+                        teammates.</p>
+                    <p>Ensured internal functionality, stability and maintainability through unit testing and debugging.
+                    </p>
+                    <p>Created modular, readable code by employing the VIP architectural pattern.</p>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="experience-card">
+                <div class="experience-head container-fluid">
+                    <div class="position-company">
+                        <p class="company">Landsure Systems</p>
+                        <p> - </p>
+                        <p class="position">iOS Developer</p>
+                    </div>
+                    <p class="location">Vancouver, BC</p>
+                    <p class="period">September 2018 - December 2018</p>
+                </div>
+
+                <div class="experience-body container-fluid">
+                    <p>
+                        Designed and built a functional mobile prototype reflecting the essential services offered by
+                        the myLTSA web app.</p>
+                    <p>
+                        Implemented Agile development methods; Iterated through several versions of the prototype,
+                        allowing for input from team members.</p>
+                    <p>
+                        Employed initiative and prioritized tasks to ensure the project was completed in 3 months while
+                        working under minimal supervision.</p>
+                    <p>Aggregated several distinct services by integrating multiple REST APIs, resulting in a more
+                        accurate product</p>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="experience-card">
+                <div class="experience-head container-fluid">
+                    <div class="position-company">
+                        <p class="company">B4T Solutions</p>
+                        <p> - </p>
+                        <p class="position">Mobile Developer</p>
+                    </div>
+                    <p class="location">Ottawa, ON</p>
+                    <p class="period">May 2018 - July 2018</p>
+                </div>
+
+                <div class="experience-body container-fluid">
+                    <p>
+                        Built a prototype event ticketing app for iOS and Android.</p>
+                    <p>
+                        Worked with CouchbaseDB to manipulate data ensure consistent syncing across devices online as
+                        well as for short periods offline.</p>
+                    <p>
+                        Used Jira Services to coordinate task scheduling and improve task-prioritizing between
+                        teammates.</p>
+                </div>
+            </div>
+
         </section>
 
         <section id="skills">
