functional skills section that is created programatically from js file
 created skills section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mar Koss</title>
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
@@ -14,7 +14,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap"
         rel="stylesheet">
-
 
 </head>
 
@@ -83,7 +82,7 @@
 
     </section>
 
-    <div class="container">
+    <div class="container-fluid">
 
         <section id="experience">
             <h2>Experience</h2>
@@ -227,33 +226,14 @@
         </section>
 
         <section id="skills">
-            <div class="container-fluid">
+            <div class="container-fluid skills-section">
                 <h2>Skills</h2>
-                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
-                    if
-                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
-                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
-                    I've
-                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
-                    God
-                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
-                    think
-                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
-                    have
-                    dinosaurs on your dinosaur tour, right? I was part of something special.
-                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
-                    Jaguar
-                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
-                    bucket
-                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
-                    could, they didn't stop to think if they should.
-                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
-                    Dinosaurs.
-                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
-                    and
-                    I'll give you something to cry about you little bastard!</p>
+                
+                 <div class="row row-cols-2" id="skillsRowDiv"> 
+
+                 </div> 
+
+
             </div>
         </section>
 
@@ -319,6 +299,7 @@
             </div>
         </section>
     </div>
+    <script type="text/javascript" src="app.js" charset="utf-8"></script>
 
 </body>
 
