--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                             </a>
                         </div>
                         <div class="col text-center py-2">
-                            <a href="#skills" class="btn btn-dark nav-link">
-                                <img src="img/skills.png" alt="">
+                            <a href="#projects" class="btn btn-dark nav-link">
+                                <img src="img/projects.png" alt="">
                             </a>
                         </div>
                         <div class="col text-center py-2">
-                            <a href="#projects" class="btn btn-dark nav-link">
-                                <img src="img/projects.png" alt="">
+                            <a href="#skills" class="btn btn-dark nav-link">
+                                <img src="img/skills.png" alt="">
                             </a>
                         </div>
                         <div class="col text-center py-2">
@@ -225,46 +225,71 @@
 
         </section>
 
-        <section id="skills">
-            <div class="container-fluid skills-section">
-                <h2>Skills</h2>
-                
-                 <div class="row row-cols-2" id="skillsRowDiv"> 
+        <section id="projects">
+            <div class="container-fluid">
+                <h2>Projects</h2>
 
-                 </div> 
+                <div class="album py-5">
+                    <div class="container">
 
+                        <div class="row">
+
+                            <div class="col-md-6">
+                                <div class="mb-4 box-shadow">
+                                    <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/treeClimbrLogo.png"
+                                        data-holder-rendered="true">
+                                    <div class="card-body">
+                                        <h3 class="card-title"> TreeClimbr </h3>
+                                        <p class="card-text"> Connecting people with local trees
+                                        </p>
+                                        <div class="container">
+                                            <a class="btn btn-dark"
+                                                href="https://apps.apple.com/ca/app/treeclimbr/id1330079765">Don't
+                                                fall</a>
+                                        </div>
+                                        <div class="container mt-4">
+                                            <a class=""
+                                                href="https://github.com/kossmar/TreeClimbr-iOS">https://github.com/kossmar/TreeClimbr-iOS</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="mb-4 box-shadow">
+                                    <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/poetika-logo.png"
+                                        data-holder-rendered="true">
+                                    <div class="card-body">
+                                        <h3 class="card-title"> Poetika </h3>
+                                        <p class="card-text">A simple platform for sharing your goofs and gaffs, poetry
+                                            styles.
+                                        </p>
+                                        <a class="btn btn-dark" href="https://poetika.herokuapp.com">Write that
+                                            poetry</a>
+                                        <div class="container mt-4">
+                                            <a class=""
+                                                href="https://github.com/kossmar/poetika">https://github.com/kossmar/poetika</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </section>
 
-        <section id="projects">
-            <div class="container-fluid">
-                <h2>Projects</h2>
-                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
-                    if
-                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
-                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
-                    I've
-                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
-                    God
-                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
-                    think
-                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
-                    have
-                    dinosaurs on your dinosaur tour, right? I was part of something special.
-                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
-                    Jaguar
-                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
-                    bucket
-                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
-                    could, they didn't stop to think if they should.
-                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
-                    Dinosaurs.
-                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
-                    and
-                    I'll give you something to cry about you little bastard!</p>
+        <section id="skills">
+            <div class="container-fluid skills-section">
+                <h2>Skills</h2>
+
+                <div class="row row-cols-2" id="skillsRowDiv">
+
+                </div>
+
+
             </div>
         </section>
 
