added collapsible project info

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <div class="row">
 
                             <div class="col-md-6">
-                                <div class="mb-4 box-shadow">
+                                <div class="mb-4 box-shadow project-card">
                                     <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/treeClimbrLogo.png"
                                         data-holder-rendered="true">
                                     <div class="card-body">
@@ -247,16 +247,33 @@
                                                 href="https://apps.apple.com/ca/app/treeclimbr/id1330079765">Don't
                                                 fall</a>
                                         </div>
-                                        <div class="container mt-4">
-                                            <a class=""
-                                                href="https://github.com/kossmar/TreeClimbr-iOS">https://github.com/kossmar/TreeClimbr-iOS</a>
+                                        <div class="my-2">
+                                            <a class="btn collapsible text-secondary"> More Info</a>
+                                            <div class="content">
+                                                <div class="container mt-2">
+                                                    <a class=""
+                                                        href="https://github.com/kossmar/TreeClimbr-iOS">https://github.com/kossmar/TreeClimbr-iOS</a>
+                                                </div>
+                                                <p></p>
+                                                    <p class="font-weight-bold">Built With: </p>
+                                                    <div class="container stack-info">
+                                                        <div class="row">
+                                                            <div class="col p-3">
+                                                                VIP-Architecture
+                                                            </div>
+                                                            <div class="col p-3">
+                                                                MapKit
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
-                                <div class="mb-4 box-shadow">
+                                <div class="mb-4 box-shadow project-card">
                                     <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/poetika-logo.png"
                                         data-holder-rendered="true">
                                     <div class="card-body">
@@ -266,10 +283,47 @@
                                         </p>
                                         <a class="btn btn-dark" href="https://poetika.herokuapp.com">Write that
                                             poetry</a>
-                                        <div class="container mt-4">
-                                            <a class=""
-                                                href="https://github.com/kossmar/poetika">https://github.com/kossmar/poetika</a>
+                                        <!-- <button type="button" class="collapsible">Open Collapsible</button> -->
+                                        <div class="my-2">
+                                            <a class="btn collapsible text-secondary"> More Info</a>
+                                            <div class="content">
+                                                <div class="container mt-2">
+                                                    <a class=""
+                                                        href="https://github.com/kossmar/poetika">https://github.com/kossmar/poetika</a>
+                                                </div>
+                                                <p></p>
+                                                <p class="font-weight-bold">Built With: </p>
+                                                <div class="container stack-info">
+                                                    <div class="row">
+                                                        <div class="col p-3">
+                                                            Node.js
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            EJS
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            Express
+                                                        </div>                                                        
+                                                        <div class="col p-3">
+                                                            Mongoose
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            Passport
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            HTML
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            CSS
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            JavaScript
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
+
                                     </div>
                                 </div>
                             </div>
