changed github links to open in new tab

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                             <div class="content">
                                                 <div class="container mt-2">
                                                     <a class=""
-                                                        href="https://github.com/kossmar/TreeClimbr-iOS">https://github.com/kossmar/TreeClimbr-iOS</a>
+                                                        href="https://github.com/kossmar/TreeClimbr-iOS" target="_blank" >https://github.com/kossmar/TreeClimbr-iOS</a>
                                                 </div>
                                                 <p></p>
                                                     <p class="font-weight-bold">Built With: </p>
@@ -289,7 +289,7 @@
                                             <div class="content">
                                                 <div class="container mt-2">
                                                     <a class=""
-                                                        href="https://github.com/kossmar/poetika">https://github.com/kossmar/poetika</a>
+                                                        href="https://github.com/kossmar/poetika" target="_blank" >https://github.com/kossmar/poetika</a>
                                                 </div>
                                                 <p></p>
                                                 <p class="font-weight-bold">Built With: </p>
