added transperent gradient on the bottom of the nav and pushed it to the top of the z stack

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <div class="container mx-auto" id="nav-main">
-        <div class="py-3">
+        <div class="pb-5 pt-3">
             <div class="container nav-wide">
                 <div class="row row-cols-2 row-cols-sm-4">
                     <div class="col text-center py-2">
@@ -89,9 +89,6 @@
         <section id="experience">
 
             <div class="experience__section-container">
-                <div class="pt-5">
-
-                </div>
 
                 <h2>Experience</h2>
 
