fixed sizing issues

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                         </div>
                                         <div class="my-2">
                                             <a class="btn collapsible text-secondary"> More Info</a>
-                                            <div class="content">
+                                            <div class="collapsible-content">
                                                 <div class="container mt-2">
                                                     <a class="" href="https://github.com/kossmar/TreeClimbr-iOS"
                                                         target="_blank">https://github.com/kossmar/TreeClimbr-iOS</a>
@@ -304,7 +304,7 @@
                                         <!-- <button type="button" class="collapsible">Open Collapsible</button> -->
                                         <div class="my-2">
                                             <a class="btn collapsible text-secondary"> More Info</a>
-                                            <div class="content">
+                                            <div class="collapsible-content">
                                                 <div class="container mt-2">
                                                     <a class="" href="https://github.com/kossmar/poetika"
                                                         target="_blank">https://github.com/kossmar/poetika</a>
