--- a/index.html
+++ b/index.html
@@ -22,17 +22,22 @@
         <div class="container-fluid">
             <div class="container py-5 px-3">
                 <h1 class="fw-light">Mar Koss</h1>
-                <h5>Software Developer</h2>
-                    <p>I’m a self-motivated mobile developer, specializing in iOS / Swift. I’m inspired by the multiple
-                        languages of the mind that mobile app technology engages, combining my passion for both
-                        structure
-                        and creativity. I’m enthusiastic about well architectured, tested, quality code and am always
-                        looking for new ways to deliver this in my work through new technology and ideas. Attention to
-                        detail is important to me. My background in event / project management has sharpened my ability
-                        to
-                        focus, manage tasks, collaborate with a team and see projects to completion. If I’m not
-                        programming,
-                        I’m making music, working with electronics or otherwise creating. </p>
+                <h5>Software Developer</h5>
+                <div class="pb-2">
+                    <a
+                        href="https://www.linkedin.com/in/nicholas-mar-koss/">https://www.linkedin.com/in/nicholas-mar-koss/</a>
+                </div>
+
+                <p>I’m a self-motivated mobile developer, specializing in iOS / Swift. I’m inspired by the multiple
+                    languages of the mind that mobile app technology engages, combining my passion for both
+                    structure
+                    and creativity. I’m enthusiastic about well architectured, tested, quality code and am always
+                    looking for new ways to deliver this in my work through new technology and ideas. Attention to
+                    detail is important to me. My background in event / project management has sharpened my ability
+                    to
+                    focus, manage tasks, collaborate with a team and see projects to completion. If I’m not
+                    programming,
+                    I’m making music, working with electronics or otherwise creating. </p>
             </div>
         </div>
 
@@ -368,32 +373,31 @@
         <section id="education">
             <div class="container-fluid section-container">
                 <h2>Education</h2>
-                <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe
-                    if
-                    we screw up this planet enough, they won't want it anymore! God creates dinosaurs. God destroys
-                    dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    They're using our own satellites against us. And the clock is ticking. You know what? It is beets.
-                    I've
-                    crashed into a beet truck. They're using our own satellites against us. And the clock is ticking.
-                    God
-                    creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.
-                    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to
-                    think
-                    if they should. Checkmate... Did he just throw my cat out of the window? Eventually, you do plan to
-                    have
-                    dinosaurs on your dinosaur tour, right? I was part of something special.
-                    You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
-                    Jaguar
-                    shark! So tell me - does it really exist? This thing comes fully loaded. AM/FM radio, reclining
-                    bucket
-                    seats, and... power windows. Yeah, but your scientists were so preoccupied with whether or not they
-                    could, they didn't stop to think if they should.
-                    God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
-                    Dinosaurs.
-                    Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry,
-                    and
-                    I'll give you something to cry about you little bastard!</p>
-            </div>
+
+                <div class="experience-card">
+                    <div class="experience-head container-fluid">
+                        <div class="position-company">
+                            <p class="company">Lighthouse Labs</p>
+                            <p> - </p>
+                            <p class="position">iOS Development</p>
+                        </div>
+                        <p class="location">Vancouver, BC</p>
+                        <p class="period">October 2017 - December 2018</p>
+                    </div>
+                </div>
+
+                <div class="experience-card">
+                    <div class="experience-head container-fluid">
+                        <div class="position-company">
+                            <p class="company">University of Guelph</p>
+                            <p> - </p>
+                            <p class="position">B.Sc Wildlife Biology</p>
+                        </div>
+                        <p class="location">Guelph, ON</p>
+                        <p class="period">September 2010 - April 2014</p>
+                    </div>
+                </div>
+
         </section>
     </div>
     <script type="text/javascript" src="app.js" charset="utf-8"></script>
