--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         href="https://www.linkedin.com/in/nicholas-mar-koss/">https://www.linkedin.com/in/nicholas-mar-koss/</a>
                 </div>
 
-                <p>I’m a self-motivated mobile developer, specializing in iOS / Swift. I’m inspired by the multiple
-                    languages of the mind that mobile app technology engages, combining my passion for both
+                <p>I’m a self-motivated software developer, specializing in web and mobile development. I’m inspired by the multiple
+                    languages of the mind that coding engages, combining my passion for both
                     structure
                     and creativity. I’m enthusiastic about well architectured, tested, quality code and am always
                     looking for new ways to deliver this in my work through new technology and ideas. Attention to
