--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                             <a href="#projects" class="btn btn-dark nav-link"> Projects </a>
                         </div>
                         <div class='col'>
-                            <!-- <img class='logo w-50' src='img/mar-koss-logo.png'/> -->
-                            dongles
+                            <img class='logo w-50' src='img/mar-koss-logo.png'/>
                         </div>
                         <div class="col text-center py-2">
                             <a href="#skills" class="btn btn-dark nav-link"> Skills </a>
