turned the project images into links

--- a/index.html
+++ b/index.html
@@ -270,14 +270,16 @@
                             <!-- ASSASSIN GAME -->
                             <div class="col-md-4">
                                 <div class="mb-4 box-shadow project-card">
-                                    <img class="card-img-top w-50" alt="Thumbnail [100%x225]" src="img/assassin-logo-image.png"
+                                    <a href='https://assassin-game.vercel.app' target='_blank'>
+                                        <img class="card-img-top w-50" alt="Thumbnail [100%x225]" src="img/assassin-logo-image.png"
                                         data-holder-rendered="true">
+                                    </a>
                                     <div class="card-body">
                                         <h3 class="card-title"> The Assassin Game </h3>
                                         <p class="card-text">
                                             A real world last-man standing fight to the death
                                         </p>
-                                        <a class="btn btn-dark" href="https://poetika.herokuapp.com">
+                                        <a class="btn btn-dark" href="https://assassin-game.vercel.app">
                                             Kill or be killed
                                         </a>
                                         <!-- <button type="button" class="collapsible">Open Collapsible</button> -->
@@ -324,8 +326,10 @@
 
                             <div class="col-md-4">
                                 <div class="mb-4 box-shadow project-card">
-                                    <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/treeClimbrLogo.png"
-                                        data-holder-rendered="true">
+                                    <a href='https://apps.apple.com/ca/app/treeclimbr/id1330079765' target='_blank'>
+                                        <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/treeClimbrLogo.png"
+                                            data-holder-rendered="true">
+                                        </a>
                                     <div class="card-body">
                                         <h3 class="card-title"> TreeClimbr </h3>
                                         <p class="card-text"> Connecting people with local trees
@@ -362,8 +366,10 @@
 
                             <div class="col-md-4">
                                 <div class="mb-4 box-shadow project-card">
-                                    <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/poetika-logo.png"
-                                        data-holder-rendered="true">
+                                    <a href='https://poetika.herokuapp.com' target='_blank'>
+                                        <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/poetika-logo.png"
+                                            data-holder-rendered="true">
+                                    </a>
                                     <div class="card-body">
                                         <h3 class="card-title"> Poetika </h3>
                                         <p class="card-text">A simple platform for sharing your goofs and gaffs, poetry
