web design & development

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <div class="container px-3">
                     <h1 class="fw-light">Mar Koss</h1>
-                    <h5>Front-End Developer</h5>
+                    <h5>Web Design & Development</h5>
                     <!-- <div class="pb-2">
                         <a
                             href="https://www.linkedin.com/in/nicholas-mar-koss/">https://www.linkedin.com/in/nicholas-mar-koss/</a>
@@ -87,7 +87,7 @@
 
     <div class="container-fluid experience__section-container">
 
-        <div>
+        <div class="px-5">
             <p>I’m a self-motivated software developer, specializing in front-end web and mobile development. I’m inspired by the multiple
                 languages of the mind that coding engages, combining my passion for both
                 structure
