--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class='col'>
                             <div>
                                 <img class='logo-white' src='img/mar-koss-logo-white.png'/>
-                                <img class='logo-black' src='img/mar-koss-logo.png'/>
+                                <img class='logo-black' src='img/mar-koss-logo-w-bg.png'/>
                             </div>
                         </div>
                         <div class="col text-center py-2">
@@ -131,7 +131,7 @@
                                         <p class="card-text">
                                             A real world last-man standing fight to the death
                                         </p>
-                                        <a class="btn btn-dark" href="https://assassin-game.vercel.app">
+                                        <a class="btn btn-dark" href="https://assassin-game.vercel.app" target="_blank">
                                             Kill or be killed
                                         </a>
                                         <!-- <button type="button" class="collapsible">Open Collapsible</button> -->
@@ -139,8 +139,13 @@
                                             <a class="btn collapsible text-secondary"> More Info</a>
                                             <div class="collapsible-content">
                                                 <div class="container mt-2">
-                                                    <a class="" href="https://github.com/kossmar/assassin"
-                                                        target="_blank">https://github.com/kossmar/assassin</a>
+                                                    <a 
+                                                        class="" 
+                                                        href="https://github.com/kossmar/assassin"
+                                                        target="_blank"
+                                                    >
+                                                        https://github.com/kossmar/assassin
+                                                    </a>
                                                 </div>
                                                 <p></p>
                                                 <p class="font-weight-bold">Built With: </p>
@@ -188,8 +193,11 @@
                                         </p>
                                         <div class="container">
                                             <a class="btn btn-dark"
-                                                href="https://apps.apple.com/ca/app/treeclimbr/id1330079765">Don't
-                                                fall</a>
+                                                href="https://apps.apple.com/ca/app/treeclimbr/id1330079765"
+                                                target="_blank">
+                                                Don't
+                                                fall
+                                            </a>
                                         </div>
                                         <div class="my-2">
                                             <a class="btn collapsible text-secondary"> More Info</a>
@@ -227,8 +235,13 @@
                                         <p class="card-text">A simple platform for sharing your goofs and gaffs, poetry
                                             styles.
                                         </p>
-                                        <a class="btn btn-dark" href="https://poetika.herokuapp.com">Write that
-                                            poetry</a>
+                                        <a 
+                                            class="btn btn-dark" 
+                                            href="https://poetika.herokuapp.com" 
+                                            target="_blank"
+                                        >
+                                            Write that poetry
+                                        </a>
                                         <!-- <button type="button" class="collapsible">Open Collapsible</button> -->
                                         <div class="my-2">
                                             <a class="btn collapsible text-secondary"> More Info</a>
