added social buttons

--- a/index.html
+++ b/index.html
@@ -24,8 +24,20 @@
         <section id="title">
             <div class="container-fluid">
                 <div class="container px-3">
-                    <h1 class="fw-light">Mar Koss</h1>
-                    <h5 class='pb-5'>Web Design & Development</h5>
+                    <h1>Mar Koss</h1>
+                    <h5 class='pb-2'>Web Design & Development</h5>
+                    <div class="pb-3">
+                        <a class='mr-2' href='https://www.linkedin.com/in/nicholas-mar-koss/' target='_blank'>
+                            <img src='img/linkedin.png'/>
+                        </a>
+                        <a class='pr-2' href='https://github.com/kossmar' target='_blank'>
+                            <img src='img/github.png'/>
+                        </a>
+                        <a href='mailto: mar.koss@icloud.com'>
+                            <img src='img/mail.png'/>
+                        </a>
+                    </div>
+                    
                     <!-- <div class="pb-2">
                         <a
                             href="https://www.linkedin.com/in/nicholas-mar-koss/">https://www.linkedin.com/in/nicholas-mar-koss/</a>
