added thugwitch to projects

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="row">
 
                             <!-- ASSASSIN GAME -->
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <div class="mb-4 box-shadow project-card">
                                     <a href='https://assassin-game.vercel.app' target='_blank'>
                                         <img class="card-img-top w-50" alt="Thumbnail [100%x225]" src="img/assassin-logo-image.png"
@@ -194,14 +194,70 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4">
+                            <!--  THUGWITCH -->
+                            <div class="col-md-3">
+                                <div class="mb-4 box-shadow project-card">
+                                    <a href='https://thugwitch.com' target='_blank'>
+                                        <img class="card-img-top w-75" alt="Thumbnail [100%x225]" src="img/Thugwitch Icon.png"
+                                        data-holder-rendered="true">
+                                    </a>
+                                    <div class="card-body">
+                                        <h3 class="card-title"> Thugwitch Hairstyling </h3>
+                                        <p style="font-weight: 500;">2021 - present</p>
+                                        <p class="card-text">
+                                            A business landing page and scheduling portal
+                                        </p>
+                                        <a class="btn btn-dark" href="https://thugwitch.com" target="_blank">
+                                            Get Styled
+                                        </a>
+                                        <!-- <button type="button" class="collapsible">Open Collapsible</button> -->
+                                        <div class="my-2">
+                                            <a class="btn collapsible text-secondary"> More Info</a>
+                                            <div class="collapsible-content">
+                                                <p class="font-weight-bold">Built With: </p>
+                                                <div class="container stack-info">
+                                                    <div class="row">
+                                                        <div class="col p-3">
+                                                            Node.js
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            Wordpress
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            PHP
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            Webpack
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            Github Actions 
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            JavaScript
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            tailwindCSS
+                                                        </div>
+                                                        <div class="col p-3">
+                                                            Amelia
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
                                 <div class="mb-4 box-shadow project-card">
                                     <a href='https://apps.apple.com/ca/app/treeclimbr/id1330079765' target='_blank'>
-                                        <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/treeClimbrLogo.png"
+                                        <img class="card-img-top w-75" alt="Thumbnail [100%x225]" src="img/treeClimbrLogo.png"
                                             data-holder-rendered="true">
                                         </a>
                                     <div class="card-body">
-                                        <h3 class="card-title"> TreeClimbr </h3>
+                                        <h3 class="card-title"> TreeClimbr iOS </h3>
                                         <p style="font-weight: 500;">2017 - present</p>
                                         <p class="card-text"> Connecting people with local trees
                                         </p>
@@ -225,7 +281,7 @@
                                                 <div class="container stack-info">
                                                     <div class="row">
                                                         <div class="col p-3">
-                                                            VIP-Architecture
+                                                            VIP
                                                         </div>
                                                         <div class="col p-3">
                                                             MapKit
@@ -238,10 +294,10 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <div class="mb-4 box-shadow project-card">
                                     <a href='https://poetika.herokuapp.com' target='_blank'>
-                                        <img class="card-img-top" alt="Thumbnail [100%x225]" src="img/poetika-logo.png"
+                                        <img class="card-img-top w-75" alt="Thumbnail [100%x225]" src="img/poetika-logo.png"
                                             data-holder-rendered="true">
                                     </a>
                                     <div class="card-body">
@@ -510,7 +566,7 @@
                             <p class="position">iOS Development</p>
                         </div>
                         <p class="location">Vancouver, BC</p>
-                        <p class="period">October 2017 - December 2018</p>
+                        <p class="period">October 2017 - December 2017</p>
                     </div>
                 </div>
 
